# density-models

./: 404.html  MANIFEST.in  README.md  environment.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml  docs-build.yml  docs.yml  macos.yml  (+3 more)
ML_weights/: climate7_density_model.txt  main_density_model.txt
changelog/: index.html
common/: index.html
contributing/: index.html
data/: snotel_with_class.parquet
docs/: common.md  contributing.md  index.md  installation.md  snowmodels.md  usage.md
experiments/: 01_data_download_and_cleaning.ipynb  02_exploratory_data_analysis.ipynb  03_statistical_models.ipynb  04_hyperparameter_tuning.ipynb  05_ml_models.ipynb  06_model_evaluation_and_comparison.ipynb  07_model_transferability_analysis.ipynb  hyperparameters.yaml  optimize_ml_models.sh  optuna.db  optuna_studies_SWE.db  study_area_map.ipynb
faq/: index.html
installation/: index.html
notebooks/: 01_data_download_and_cleaning.ipynb  02_exploratory_data_analysis.ipynb  03_statistical_models.ipynb  04_ml_models.ipynb  05_ml_models.ipynb  05_model_evaluation_and_comparison.ipynb  06_model_evaluation_and_comparison.ipynb  06_model_transferability_analysis.ipynb  07_model_transferability_analysis.ipynb  making_predictions.ipynb  study_area_map.ipynb
search/: search_index.json
snowmodels/: __init__.py  index.html
tests/: __init__.py  test_conversions.py  test_jonas_model.py  test_pistocchi_model.py  test_snowmodels.py  test_sturm_model.py
usage/: index.html
(+30 files in other folders)
