[project]
name = "density-models"
version = "0.0.1"
dynamic = [
    "dependencies",
]
description = "A machine learning for snow density estimation project"
readme = "README.md"
requires-python = ">=3.9"
keywords = [
    "density-models",
]
license = {text = "MIT License"}
authors = [
  {name = "Ibrahim Alabi", email = "ibrahimolalekana@u.boisestate.edu"},
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.entry-points."console_scripts"]
snowmodels = "snowmodels.cli:main"


[tool]
[tool.setuptools.packages.find]
include = ["snowmodels*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}


[tool.distutils.bdist_wheel]
universal = true


[tool.bumpversion]
current_version = "0.0.1"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "snowmodels/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'


[project.urls]
Homepage = "https://github.com/Ibrahim-Ola/density-models"

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"